--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
+    "t_start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
+    "formidable": "^3.5.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
     "swagger": "^0.7.5",
