--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "fast-csv": "^4.3.6",
     "formidable": "^3.5.0",
     "multer": "^1.4.5-lts.1",
+    "pdf.js-extract": "^0.2.1",
+    "pdfjs-dist": "^3.8.162",
+    "pdfkit": "^0.13.0",
+    "pdfreader": "^3.0.0",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
     "swagger": "^0.7.5",
