--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdf.js-extract": "^0.2.1",
     "pdfjs-dist": "^3.8.162",
     "pdfkit": "^0.13.0",
+    "pdfkit-table": "^0.1.99",
     "pdfreader": "^3.0.0",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
